# papaya

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  RULESETS.md  default.nix  devenv.nix  example_config.yaml  flake.nix  justfile  main.py  pyproject.toml  ruff.toml
docs/: e2e_tests.md  modules.md  modules_implement.md  plan.md  prd.md  refactor_sender_lists.md  req.md
src/papaya/: __init__.py  __main__.py  cli.py  config.py  dovecot.py  logging.py  maildir.py  mover.py  pidfile.py  pipeline.py  rules.py  runtime.py  senders.py  store.py  trainer.py  types.py  watcher.py
src/papaya/classifiers/: __init__.py  base.py  naive_bayes.py  registry.py  tfidf_sgd.py  vectorizer.py
src/papaya/extractor/: __init__.py  domain.py  features.py  html.py
src/papaya/modules/: __init__.py  context.py  extract_features.py  loader.py  match_from.py  ml.py  naive_bayes.py  tfidf_sgd.py  vectorizer.py
tests/fixtures/corpus/ham/: 001.eml  (+19 more)
tests/integration/: conftest.py  test_daemon_lifecycle.py  test_tfidf_logging.py  test_train_classify.py  test_training_guard.py  test_user_corrections.py
tests/unit/: test_builtin_modules.py  test_cli.py  test_config.py  test_domain.py  test_dovecot.py  test_features.py  test_html.py  test_maildir.py  test_maildir_flags.py  test_module_loader.py  test_mover.py  test_naive_bayes.py  test_pidfile.py  test_pipeline.py  test_registry.py  test_rules.py  test_runtime.py  test_senders.py  test_store.py  test_tfidf_sgd.py  test_trainer.py  test_types.py  test_vectorizer.py
tests/unit/modules/: test_dependencies.py  test_match_from.py  test_ml.py
(+20 files in other folders)
