[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papaya"
version = "0.1.0"
description = "On-device maildir spam classification daemon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "freezegun>=1.4",
    "faker>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: integration tests that hit the filesystem",
    "slow: marks tests that take longer to run",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*", "sklearn", "sklearn.*"]
ignore_missing_imports = true
